Add option to copy from last agenda when creating a new one

--- a/frontend/src/app/agenda/date-dialog/date-dialog.component.html
+++ b/frontend/src/app/agenda/date-dialog/date-dialog.component.html
@@ -1,12 +1,13 @@
 <h2 mat-dialog-title>What date is the agenda for?</h2>
-<mat-dialog-content>
+<mat-dialog-content fxLayout="column">
   <mat-form-field>
-    <input matInput [matDatepicker]='picker' placeholder='Choose a date' [(ngModel)]='date'>
+    <input matInput [matDatepicker]='picker' placeholder='Choose a date' [(ngModel)]='output.date'>
     <mat-datepicker-toggle matSuffix [for]='picker'></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
+  <mat-checkbox *ngIf="lastDateString" [(ngModel)]='output.copyOfLatest'>Copy data from the last agenda ({{lastDateString}})</mat-checkbox>
 </mat-dialog-content>
 <mat-dialog-actions>
   <span style='flex: 1 1 auto;'></span>
-  <button mat-button [mat-dialog-close]='date' align='end'>Proceed</button>
+  <button mat-button [mat-dialog-close]='output' align='end'>Proceed</button>
 </mat-dialog-actions>
