--- a/frontend/src/app/agenda/detail/detail.component.html
+++ b/frontend/src/app/agenda/detail/detail.component.html
@@ -177,7 +177,7 @@
               </button>
             </div>
           </div>
-          <div *ngIf="!consultantCompany" fxFlex style="text-align: center">
+          <div *ngIf="!consultantCompany" style="margin: 0">
             <span *ngIf="agenda.new" class="mat-subheader">Select a consultant company first</span>
             <span *ngIf="!agenda.new" class="mat-subheader">Not applicable</span>
           </div>
