--- a/frontend/src/app/agenda/agenda.component.html
+++ b/frontend/src/app/agenda/agenda.component.html
@@ -4,7 +4,7 @@
   <app-agenda-detail *ngIf='newAgenda' [agenda]='newAgenda' [open]='true'
                      [companies]="consultantCompanies"></app-agenda-detail>
   <app-agenda-detail [agendaUrl]='item' *ngFor='let item of city.agendas'
-                     [companies]="consultantCompanies"></app-agenda-detail>
+                     [companies]="consultantCompanies" (agendaLoaded)="trackLatest($event)"></app-agenda-detail>
 </mat-accordion>
 <button mat-fab class='add-agenda-button' (click)='createAgendaDialog(target)' *ngIf='!newAgenda'>
   <mat-icon>add</mat-icon>
