--- a/frontend/src/app/agenda/agenda.component.html
+++ b/frontend/src/app/agenda/agenda.component.html
@@ -2,9 +2,9 @@
 <h3><span *ngIf='subregion'>{{subregion.name}}, </span><span *ngIf='region'>{{region.name}}</span></h3>
 <mat-accordion [multi]='true'>
   <app-agenda-detail *ngIf='newAgenda' [agenda]='newAgenda' [open]='true'
-                     [companies]="consultantCompanies"></app-agenda-detail>
+                     [companies]="consultantCompanies" [officials]="politicians"></app-agenda-detail>
   <app-agenda-detail [agendaUrl]='item' *ngFor='let item of city.agendas'
-                     [companies]="consultantCompanies" (agendaLoaded)="trackLatest($event)"></app-agenda-detail>
+                     [companies]="consultantCompanies" [officials]="politicians" (agendaLoaded)="trackLatest($event)"></app-agenda-detail>
 </mat-accordion>
 <button mat-fab class='add-agenda-button' (click)='createAgendaDialog(target)' *ngIf='!newAgenda'>
   <mat-icon>add</mat-icon>
