--- a/frontend/src/app/agenda/detail/detail.component.html
+++ b/frontend/src/app/agenda/detail/detail.component.html
@@ -89,12 +89,12 @@
                      [formControl]="politicianControl">
             </mat-form-field>
             <mat-autocomplete #members="matAutocomplete" [displayWith]="display"
-                              (optionSelected)="updatePolitician($event)">
+                              (optionSelected)="updatePolitician($event)" class="wide-select">
               <mat-option *ngFor="let option of filteredPoliticians | async" [value]="option">
                 <img style="vertical-align:middle;" aria-hidden
-                     src="{{option.image_url}}" height="25"/>
+                     src="{{option.image_path}}" height="25"/>
                 <span>{{ option.name }}</span>
-                <small>({{option.job_title}})</small>
+                <small>(<span *ngIf='option.city_name'>{{option.city_name}}, </span><span *ngIf='option.subregion_name'>{{option.subregion_name}}</span>)</small>
               </mat-option>
             </mat-autocomplete>
             <div fxFlex="grow">
