--- a/frontend/src/app/agenda/date-dialog/date-dialog.component.html
+++ b/frontend/src/app/agenda/date-dialog/date-dialog.component.html
@@ -5,7 +5,9 @@
     <mat-datepicker-toggle matSuffix [for]='picker'></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-  <mat-checkbox *ngIf="lastDateString" [(ngModel)]='output.copyOfLatest'>Copy data from the last agenda on {{lastDateString}}<br/>(Does not include board members)</mat-checkbox>
+  <mat-checkbox *ngIf="lastDateString" [(ngModel)]='output.copyOfLatest'>Copy data from the last agenda on
+    {{lastDateString}}<br/>(Does not include board members)
+  </mat-checkbox>
 </mat-dialog-content>
 <mat-dialog-actions>
   <span style='flex: 1 1 auto;'></span>
