--- a/frontend/src/app/listing/grid/grid.component.html
+++ b/frontend/src/app/listing/grid/grid.component.html
@@ -1,6 +1,5 @@
-<mat-progress-bar *ngIf="resultList.length < 1" [mode]="indeterminate"
-                  style="width:100%;"></mat-progress-bar>
 <div fxLayout='row column' fxLayoutAlign='center center'>
+  <mat-spinner *ngIf="resultList.length < 1" [diameter]="50"></mat-spinner>
   <mat-card class='card-item' *ngFor='let item of resultList' (click)='select(item.subdivisions, item.id, item.name)'>
     <mat-card-header>
       <mat-card-title class='government-name'>{{item.name}}</mat-card-title>
